--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,16 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_camera">CameraActivity</string>
+    <string name="title_activity_ocr">OCRActivity</string>
+    <string name="title_activity_async_process_task">AsyncProcessTask</string>
+    <string name="menu_settings">Settings</string>
+    <string name="fromCamera">From Camera</string>
+    <string name="fromFile">From File</string>
+    <string name="title_activity_results">Results</string>
+    <string name="hello">hello</string>
+    <string name="Banner">Split</string>
+    <string name="title_activity_photo">PhotoActivity</string>
+    <string name="title_activity_sort">SortActivity</string>
+
+
 </resources>
